--- a/CRUDExample/Views/Persons/Index.cshtml
+++ b/CRUDExample/Views/Persons/Index.cshtml
@@ -4,12 +4,42 @@
     ViewBag.Title = "Persons";
 }
 
+<form action="~/persons/index" method="get">
 <h1>Persons</h1>
+<div class="box flex">
+    <div class ="flex-1">
+        <select class="form-input" name="searchBy">
+            @foreach(var field in ViewBag.SearchFields)
+            {
+                if(field.Key == ViewBag.CurrentSearchBy)
+                {
+                    <option value="@field.Key" selected="selected">@field.Value</option>
+                }
+                else
+                {
+                    <option value="@field.Key">@field.Value</option>
+                }
+            }
+        </select>
+    </div>
+
+    <div class="flex-1">
+        <input type="search" id="Search" class="form-input" placeholder="search" name="searchString"value="@ViewBag.CurrentSearchString" />
+    </div>
+
+    <div class="flex-1">
+        <button class="button button-blue-back">Search</button>
+        <a href="~/persons/index">Clear All</a>
+    </div>
+</div>
 
 <table class="table w-100 mt">
     <thead>
         <tr>
-            <th>Person Name</th>
+            <th>
+                <a href="~/persons/index?searchBy=@ViewBag.CurrentSearchBy&searchString=@ViewBag.CurrentSearchString
+                 &sortBy=@nameof(PersonResponse.PersonName)&sortOrder=DESC">Person Name</a>
+            </th>
             <th>Email</th>
             <th>Date Of Birth</th>
             <th>Age</th>
@@ -35,3 +65,4 @@
         }
     </tbody>
 </table>
+</form>
