--- a/CRUDExample/Views/Persons/Index.cshtml
+++ b/CRUDExample/Views/Persons/Index.cshtml
@@ -3,66 +3,100 @@
 @{
     ViewBag.Title = "Persons";
 }
-
 <form action="~/persons/index" method="get">
-<h1>Persons</h1>
-<div class="box flex">
-    <div class ="flex-1">
-        <select class="form-input" name="searchBy">
-            @foreach(var field in ViewBag.SearchFields)
-            {
-                if(field.Key == ViewBag.CurrentSearchBy)
+    <h1>Persons</h1>
+
+    <div class="box flex">
+        <div class="flex-1">
+            <select class="form-input" name="searchBy">
+                @foreach (var field in ViewBag.SearchFields)
                 {
-                    <option value="@field.Key" selected="selected">@field.Value</option>
+                    if (field.Key == ViewBag.CurrentSearchBy)
+                    {
+                        <option value="@field.Key" selected="selected">@field.Value</option>
+                    }
+                    else
+                    {
+                        <option value="@field.Key">@field.Value</option>
+                    }
+
                 }
-                else
-                {
-                    <option value="@field.Key">@field.Value</option>
-                }
-            }
-        </select>
+                @* Eg: searchBy=PersonName&searchString=abc *@
+            </select>
+        </div>
+
+        <div class="flex-1">
+            <input type="search" id="Search" class="form-input" placeholder="Search" name="searchString" value="@ViewBag.CurrentSearchString" />
+        </div>
+
+        <div class="flex-1">
+            <button class="button button-blue-back">Search</button>
+            <a href="~/persons/index" class="link-hover">Clear all</a>
+        </div>
     </div>
 
-    <div class="flex-1">
-        <input type="search" id="Search" class="form-input" placeholder="search" name="searchString"value="@ViewBag.CurrentSearchString" />
-    </div>
 
-    <div class="flex-1">
-        <button class="button button-blue-back">Search</button>
-        <a href="~/persons/index">Clear All</a>
-    </div>
-</div>
-
-<table class="table w-100 mt">
-    <thead>
-        <tr>
-            <th>
-                <a href="~/persons/index?searchBy=@ViewBag.CurrentSearchBy&searchString=@ViewBag.CurrentSearchString
-                 &sortBy=@nameof(PersonResponse.PersonName)&sortOrder=DESC">Person Name</a>
-            </th>
-            <th>Email</th>
-            <th>Date Of Birth</th>
-            <th>Age</th>
-            <th>Gender</th>
-            <th>Country</th>
-            <th>Address</th>
-            <th>Receive News Letter</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach(PersonResponse personResponse in Model)
-        {
+    <table class="table w-100 mt">
+        <thead>
             <tr>
-                <td>@personResponse.PersonName</td>
-                <td>@personResponse.Email</td>
-                <td>@personResponse.DateOfBirth?.ToString("dd-mm-yyyy")</td>
-                <td>@personResponse.Age</td>
-                <td>@personResponse.Gender</td>
-                <td>@personResponse.Country</td>
-                <td>@personResponse.Address</td>
-                <td>@personResponse.ReceiveNewsLetters</td>
+                @await Html.PartialAsync("_GridColumnHeader", new ViewDataDictionary(ViewData) {
+                { "ColumnName", nameof(PersonResponse.PersonName) },
+                { "DisplayName", "Person Name" },
+                })
+
+                @await Html.PartialAsync("_GridColumnHeader", new ViewDataDictionary(ViewData) {
+                { "ColumnName", nameof(PersonResponse.Email) },
+                { "DisplayName", "Email" },
+                })
+
+                @await Html.PartialAsync("_GridColumnHeader", new ViewDataDictionary(ViewData) {
+                { "ColumnName", nameof(PersonResponse.DateOfBirth) },
+                { "DisplayName", "Date of Birth" },
+                })
+
+                @await Html.PartialAsync("_GridColumnHeader", new ViewDataDictionary(ViewData) {
+                { "ColumnName", nameof(PersonResponse.Age) },
+                { "DisplayName", "Age" },
+                })
+
+                @await Html.PartialAsync("_GridColumnHeader", new ViewDataDictionary(ViewData) {
+                { "ColumnName", nameof(PersonResponse.Gender) },
+                { "DisplayName", "Gender" },
+                })
+
+                @await Html.PartialAsync("_GridColumnHeader", new ViewDataDictionary(ViewData) {
+                { "ColumnName", nameof(PersonResponse.Country) },
+                { "DisplayName", "Country" },
+                })
+
+                @await Html.PartialAsync("_GridColumnHeader", new ViewDataDictionary(ViewData) {
+                { "ColumnName", nameof(PersonResponse.Address) },
+                { "DisplayName", "Address" },
+                })
+
+                @await Html.PartialAsync("_GridColumnHeader", new ViewDataDictionary(ViewData) {
+                { "ColumnName", nameof(PersonResponse.ReceiveNewsLetters) },
+                { "DisplayName", "Receive News Letters" },
+                })
+
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (PersonResponse person in Model)
+            {
+                <tr>
+                    <td style="width:15%">@person.PersonName</td>
+                    <td style="width:20%">@person.Email</td>
+                    <td style="width:13%">@person.DateOfBirth?.ToString("dd MMM yyyy")</td>
+                    <td style="width:9%">@person.Age</td>
+                    <td style="width:9%">@person.Gender</td>
+                    <td style="width:10%">@person.Country</td>
+                    <td style="width:15%">@person.Address</td>
+                    <td style="width:20%">@person.ReceiveNewsLetters</td>
+                </tr>
+            }
+            <tr></tr>
+        </tbody>
+
+    </table>
 </form>
