--- a/CRUDExample/Views/Persons/Create.cshtml
+++ b/CRUDExample/Views/Persons/Create.cshtml
@@ -1,12 +1,14 @@
-﻿@{
+﻿@model PersonAddRequest
+
+@{
     ViewBag.Title = "Create Person";
 }
 
-<a href="~/persons/index" class="link-hover">Back to Persons List</a>
+<a asp-controller="Persons" asp-action="Index" class="link-hover">Back to Persons List</a>
 <h2>Create Person</h2>
 
 <div class="w-50">
-    <form action="~/persons/create" method="post">
+    <form asp-controller="Persons" asp-action="Create" method="post">
 
         @*PersonName*@
         <div class="form-field flex">
@@ -14,7 +16,7 @@
                 <label for="PersonName" class="form-label pt">Person Name</label>
             </div>
             <div class="flex-1">
-                <input type="text" id="PersonName" name="PersonName" class="form-input" />
+                <input asp-for="PersonName" class="form-input" />
             </div>
         </div>
 
@@ -25,7 +27,7 @@
                 <label for="Email" class="form-label pt">Email</label>
             </div>
             <div class="flex-1">
-                <input type="email" id="Email" name="Email" class="form-input" />
+                <input asp-for="Email" class="form-input" />
             </div>
         </div>
 
@@ -35,7 +37,7 @@
                 <label for="DateOfBirth" class="form-label pt">Date of Birth</label>
             </div>
             <div class="flex-1">
-                <input type="date" id="DateOfBirth" name="DateOfBirth" class="form-input" />
+                <input asp-for="DateOfBirth" class="form-input" />
             </div>
         </div>
 
@@ -45,14 +47,15 @@
                 <label class="form-label">Gender</label>
             </div>
             <div class="flex-1">
-                <input type="radio" id="Male" name="Gender" value="Male" />
-                <label for="Male">Male</label>
+                @{
+                    String[] Genders = Enum.GetNames(typeof(GenderOptions));
+                }
 
-                <input type="radio" id="Female" name="Gender" value="Female" class="ml" />
-                <label for="Female">Female</label>
-
-                <input type="radio" id="Other" name="Gender" value="Other" class="ml" />
-                <label for="Other">Other</label>
+                @foreach(string Gender in Genders)
+                {
+                    <input type="radio" asp-for="Gender" value="@Gender" />
+                    <label for="@Gender">@Gender</label>
+                }
             </div>
         </div>
 
@@ -62,7 +65,7 @@
                 <label class="form-label" for="CountryID">Country</label>
             </div>
             <div class="flex-1">
-                <select name="CountryID" id="CountryID" class="form-input">
+                <select asp-for="CountryId" class="form-input">
                     <option value="">Please Select</option>
                     @foreach (CountryResponse country in ViewBag.Countries)
                     {
@@ -79,7 +82,7 @@
                 <label for="Address" class="form-label pt">Address</label>
             </div>
             <div class="flex-1">
-                <textarea id="Address" name="Address" class="form-input"></textarea>
+                <textarea asp-for="Address" class="form-input"></textarea>
             </div>
         </div>
 
@@ -88,7 +91,7 @@
             <div class="w-25">
             </div>
             <div class="flex-1">
-                <input type="checkbox" name="ReceiveNewsLetters" id="ReceiveNewsLetters" value="true" />
+                <input asp-for="ReceiveNewsLetters" value="true" />
                 <label for="ReceiveNewsLetters" class="form-label">Receive News Letters</label>
             </div>
         </div>
