--- a/CRUDExample/Views/Persons/Create.cshtml
+++ b/CRUDExample/Views/Persons/Create.cshtml
@@ -13,7 +13,7 @@
         @*PersonName*@
         <div class="form-field flex">
             <div class="w-25">
-                <label for="PersonName" class="form-label pt">Person Name</label>
+                <label asp-for="PersonName" class="form-label pt">Person Name</label>
             </div>
             <div class="flex-1">
                 <input asp-for="PersonName" class="form-input" />
@@ -24,7 +24,7 @@
         @*Email*@
         <div class="form-field flex">
             <div class="w-25">
-                <label for="Email" class="form-label pt">Email</label>
+                <label asp-for="Email" class="form-label pt">Email</label>
             </div>
             <div class="flex-1">
                 <input asp-for="Email" class="form-input" />
@@ -34,7 +34,7 @@
         @*DateOfBirth*@
         <div class="form-field flex">
             <div class="w-25">
-                <label for="DateOfBirth" class="form-label pt">Date of Birth</label>
+                <label asp-for="DateOfBirth" class="form-label pt">Date of Birth</label>
             </div>
             <div class="flex-1">
                 <input asp-for="DateOfBirth" class="form-input" />
@@ -54,7 +54,7 @@
                 @foreach(string Gender in Genders)
                 {
                     <input type="radio" asp-for="Gender" value="@Gender" />
-                    <label for="@Gender">@Gender</label>
+                    <label asp-for="@Gender">@Gender</label>
                 }
             </div>
         </div>
@@ -62,15 +62,11 @@
         @*Country*@
         <div class="form-field flex">
             <div class="w-25">
-                <label class="form-label" for="CountryID">Country</label>
+                <label class="form-label" asp-for="CountryID">Country</label>
             </div>
             <div class="flex-1">
-                <select asp-for="CountryId" class="form-input">
+                <select asp-for="CountryId" class="form-input" asp-items="@ViewBag.Countries">
                     <option value="">Please Select</option>
-                    @foreach (CountryResponse country in ViewBag.Countries)
-                    {
-                        <option value="@country.CountryId">@country.CountryName</option>
-                    }
                 </select>
             </div>
         </div>
@@ -79,7 +75,7 @@
         @*Address*@
         <div class="form-field flex">
             <div class="w-25">
-                <label for="Address" class="form-label pt">Address</label>
+                <label asp-for="Address" class="form-label pt">Address</label>
             </div>
             <div class="flex-1">
                 <textarea asp-for="Address" class="form-input"></textarea>
@@ -92,7 +88,7 @@
             </div>
             <div class="flex-1">
                 <input asp-for="ReceiveNewsLetters" value="true" />
-                <label for="ReceiveNewsLetters" class="form-label">Receive News Letters</label>
+                <label asp-for="ReceiveNewsLetters" class="form-label">Receive News Letters</label>
             </div>
         </div>
 
