--- a/CRUDExample/Views/Persons/Create.cshtml
+++ b/CRUDExample/Views/Persons/Create.cshtml
@@ -17,6 +17,7 @@
             </div>
             <div class="flex-1">
                 <input asp-for="PersonName" class="form-input" />
+                <span asp-validation-for="PersonName" class="text-red"></span>
             </div>
         </div>
 
@@ -28,6 +29,7 @@
             </div>
             <div class="flex-1">
                 <input asp-for="Email" class="form-input" />
+                <span asp-validation-for="Email" class="text-red"></span>
             </div>
         </div>
 
@@ -38,6 +40,7 @@
             </div>
             <div class="flex-1">
                 <input asp-for="DateOfBirth" class="form-input" />
+                <span asp-validation-for="DateOfBirth" class="text-red"></span>
             </div>
         </div>
 
@@ -56,18 +59,20 @@
                     <input type="radio" asp-for="Gender" value="@Gender" />
                     <label asp-for="@Gender">@Gender</label>
                 }
+                <span asp-validation-for="Gender" class="text-red"></span>
             </div>
         </div>
 
         @*Country*@
         <div class="form-field flex">
             <div class="w-25">
-                <label class="form-label" asp-for="CountryID">Country</label>
+                <label class="form-label" asp-for="CountryId">Country</label>
             </div>
             <div class="flex-1">
                 <select asp-for="CountryId" class="form-input" asp-items="@ViewBag.Countries">
                     <option value="">Please Select</option>
                 </select>
+                <span asp-validation-for="CountryId" class="text-red"></span>
             </div>
         </div>
 
@@ -79,6 +84,8 @@
             </div>
             <div class="flex-1">
                 <textarea asp-for="Address" class="form-input"></textarea>
+                <span asp-validation-for="Address" class="text-red"></span>
+                <span asp-validation-for="ReceiveNewsLetters" class="text-red"></span>
             </div>
         </div>
 
@@ -99,6 +106,8 @@
             <div class="flex-1">
                 <button class="button button-green-back">Create</button>
 
+                <div asp-validation-summary="All" class="text-red"></div>
+
                 @if (ViewBag.Errors != null)
                 {
                     <div class="text-red ml">
@@ -115,3 +124,9 @@
 
     </form>
 </div>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.4/jquery.validate.min.js"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.12/jquery.validate.unobtrusive.min.js"></script>
