--- a/CRUDExample/Views/Shared/_Layout.cshtml
+++ b/CRUDExample/Views/Shared/_Layout.cshtml
@@ -11,7 +11,9 @@
     <div>
         <div class="container">
             <div class="navbar">
-                <div class="navbar-brand">CRUD DEMO</div>
+                <div class="navbar-brand">
+                    <img src="~/logo.png" width="100px" asp-append-version="true" />
+                </div>
                 <ul>
                     <li>
                         <a href="~/persons/index">Persons</a>
