--- a/CRUDExample/Views/Persons/Index.cshtml
+++ b/CRUDExample/Views/Persons/Index.cshtml
@@ -82,6 +82,8 @@
                 { "DisplayName", "Receive News Letters" },
                 })
 
+                <th>Options</th>
+
             </tr>
         </thead>
         <tbody>
@@ -96,6 +98,9 @@
                     <td style="width:10%">@person.Country</td>
                     <td style="width:15%">@person.Address</td>
                     <td style="width:20%">@person.ReceiveNewsLetters</td>
+                    <td style="width:20%">
+                        <a asp-controller="Persons" asp-action="Edit" asp-route-personID="@person.PersonId">Edit</a>
+                    </td>
                 </tr>
             }
             <tr></tr>
