--- a/CRUDExample/Views/Persons/Index.cshtml
+++ b/CRUDExample/Views/Persons/Index.cshtml
@@ -100,6 +100,7 @@
                     <td style="width:20%">@person.ReceiveNewsLetters</td>
                     <td style="width:20%">
                         <a asp-controller="Persons" asp-action="Edit" asp-route-personID="@person.PersonId">Edit</a>
+                        <a asp-controller="Persons" asp-action="Delete" asp-route-personID="@person.PersonId">Delete</a>
                     </td>
                 </tr>
             }
